<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ui.home.HomeFragment">

        <ScrollView
            android:id="@+id/all_films_scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".MainActivity">

                <androidx.cardview.widget.CardView
                    android:id="@+id/titanic_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    app:cardCornerRadius="@dimen/default_card_corner_radius"
                    app:cardElevation="@dimen/small_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/titanic_image_view"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/default_margin"
                            android:layout_marginTop="@dimen/default_margin"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/no_text"
                            android:scaleType="centerCrop"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/titanic" />

                        <TextView
                            android:id="@+id/titanic_title_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/default_margin"
                            android:text="@string/titanic_title"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/title_size"
                            app:layout_constraintBaseline_toBaselineOf="@+id/detail_titanic_button"
                            app:layout_constraintStart_toStartOf="parent" />

                        <Button
                            android:id="@+id/detail_titanic_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/default_margin"
                            android:background="@drawable/button_shape"
                            android:text="@string/detail_button_text"
                            android:textAppearance="@style/DetailButton"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/titanic_image_view" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/once_upon_a_time_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    app:cardCornerRadius="@dimen/default_card_corner_radius"
                    app:cardElevation="@dimen/small_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/titanic_card_view">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/once_upon_a_time_in_hollywood_image_view"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/default_margin"
                            android:layout_marginTop="@dimen/default_margin"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/no_text"
                            android:scaleType="centerCrop"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/once_upon_a_time_in_hollywood_photo" />

                        <TextView
                            android:id="@+id/once_upon_a_time_title_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/default_margin"
                            android:text="@string/once_upon_a_time_title"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/title_size"
                            app:layout_constraintBaseline_toBaselineOf="@+id/detail_once_upon_a_tome_in_hollywood_button"
                            app:layout_constraintStart_toStartOf="parent" />

                        <Button
                            android:id="@+id/detail_once_upon_a_tome_in_hollywood_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/default_margin"
                            android:background="@drawable/button_shape"
                            android:text="@string/detail_button_text"
                            android:textAppearance="@style/DetailButton"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/once_upon_a_time_in_hollywood_image_view" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/pulp_fiction_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    app:cardCornerRadius="@dimen/default_card_corner_radius"
                    app:cardElevation="@dimen/small_margin"
                    android:layout_marginBottom="70dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/once_upon_a_time_card_view">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/pulp_fiction_image_view"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/default_margin"
                            android:layout_marginTop="@dimen/default_margin"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/no_text"
                            android:scaleType="centerCrop"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/pulp_fiction_photo" />

                        <TextView
                            android:id="@+id/pulp_fiction_title_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/default_margin"
                            android:layout_marginVertical="@dimen/default_margin"
                            android:text="@string/pulp_fiction_title"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/title_size"
                            app:layout_constraintBaseline_toBaselineOf="@+id/detail_pulp_fiction_button"
                            app:layout_constraintStart_toStartOf="parent" />

                        <Button
                            android:id="@+id/detail_pulp_fiction_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/default_margin"
                            android:layout_marginBottom="16dp"
                            android:background="@drawable/button_shape"
                            android:text="@string/detail_button_text"
                            android:textAppearance="@style/DetailButton"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/pulp_fiction_image_view" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_dialog_email"
            app:layout_anchor="@id/all_films_scrollView"
            app:layout_anchorGravity="bottom|end"
            app:layout_behavior=".behavior.ScrollAwareFABBehavior"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>